# Griffsort-Bevy

./: .gitignore  1.txt  2.txt  Cargo.toml  Config.toml  Makefile  README.md  addr.txt  cli.txt  client  client.sh  console_ex.txt  log.txt  package.sh  serv.txt  server  str
.fleet/: run.json
assets/: circle.glb
assets/models/: map.gltf  shield.gltf
assets/models/TestMap/: map.glb  Свет+текстуры.gltf
assets/models/map1/: Test_map.gltf
assets/models/minecraft_map/: license.txt  scene.gltf
assets/models/weapon1/: weapon.gltf
assets/models/weapon1_broken/: weapon1_broken.gltf
assets/models/weapon_f/: weapon_f.gltf
assets/models/wisp_forest/: license.txt
build-assets/linux/: downgrade.sh  update.sh
build-assets/windows/: downgrade.bat  update.bat
config/: conf.ron  config.ron  config.ron.sens  crosshair.ron  debugger.ron  def.ron  dev-init.ron  game_config.ron  heroes.ron  in_game.script  input_map.ron  jacqueline.ron  keybindings.ron  keycode-map.ron  main_menu.script  soul.ron  yui_shang.ron
config/character-config/: soul.ron
config/character-config/Zero/: default.ron
config/characters/: zero.ron
core/src/: main.rs
core/src/inputs/: mod.rs  plugin.rs  systems.rs
crates/: README.md
crates/actions/: Cargo.toml  bindings.default.ron
crates/actions/src/: example.rs  lib.rs  plugin.rs  resources.rs  systems.rs
crates/anime/: Cargo.toml
crates/anime/src/: lib.rs  plugin.rs  resources.rs
crates/bevy_debug_shapes/: Cargo.toml
crates/bevy_debug_shapes/src/: extension.rs  lib.rs
crates/bevy_draw_debug_tools/: Cargo.toml
crates/bevy_draw_debug_tools/src/: extension.rs  impls.rs  lib.rs
crates/core/src/: lib.rs
crates/corgee/: Cargo.toml
crates/corgee/src/: additional.rs  easing.rs  hot_config.rs  lib.rs  plugin.rs  scene_viewer.rs
crates/corgee/src/goconfig/: mod.rs  plugin.rs  resources.rs
crates/corgee/src/goinputs/: gamepad.rs  mod.rs  resources.rs  systems.rs
crates/corgee/src/shared/: character.rs  mod.rs  resources.rs  systems.rs
crates/corgee/src/states/: mod.rs
crates/go_character/: Cargo.toml  README.md
crates/go_character/heroes/: Cargo.toml
crates/go_character/heroes/src/: plugin.rs  resources.rs
crates/go_character/src/: lib.rs  plugin.rs
crates/go_character/src/characters/: mod.rs  soul.rs
crates/go_character/src/controller/: easing.rs  mod.rs  plugin.rs  prebuild.rs  resources.rs
crates/go_character/src/shared/: mod.rs  resources.rs  systems.rs
crates/go_core/: Cargo.toml
crates/go_core/src/: lib.rs  plugin.rs
crates/go_inspector/: Cargo.toml
crates/go_inspector/src/: lib.rs  plugin.rs  resources.rs  widgets.rs
crates/go_interface/: Cargo.toml
crates/go_level/: Cargo.toml
crates/go_level/src/: lib.rs  plugin.rs  resources.rs  systems.rs
crates/go_multiplayer/: Cargo.toml
crates/go_multiplayer/docs/: current.dio  main.dio
crates/go_multiplayer/src/: plugin.rs
crates/go_multiplayer/src/client/: plugin.rs  systems.rs
crates/go_multiplayer/src/client/tick/: plugin.rs  systems.rs
crates/go_multiplayer/src/server/: mod.rs  plugin.rs  resources.rs  systems.rs
crates/go_multiplayer/src/server/tick/: plugin.rs  systems.rs
crates/go_multiplayer/src/shared/: resources.rs  systems.rs
crates/go_multiplayer/src/shared/data_structs/: go_history.rs
crates/go_snap/: Cargo.toml
crates/go_snap/src/: lib.rs  plugin.rs
crates/gocha/: Cargo.toml  README.md
crates/gocha/docs-assets/: overview.md
crates/gocha/heroes/: Cargo.toml  README.md
crates/gocha/heroes/src/: lib.rs  plugin.rs  resources.rs
crates/gocha/src/: lib.rs  plugin.rs
crates/gocha/src/characters/: default_char.rs  mod.rs  soul.rs
crates/gocha/src/shared/: resources.rs  systems.rs
crates/gs_inspector/: Cargo.toml
crates/gs_inspector/src/: commands.rs  lib.rs  plugin.rs  resources.rs  systems.rs  widgets.rs
crates/gs_states/: Cargo.toml
crates/gs_states/src/: lib.rs  logic.rs
crates/gs_ui/: Cargo.toml
crates/gs_ui/src/: lib.rs  plugin.rs  resources.rs  systems.rs
crates/heroes/: Cargo.toml
crates/heroes/src/: cd_manager.rs  debug.rs  hud.rs  id_manager.rs  lib.rs  plugin.rs  systems.rs
crates/heroes/src/controller/: body_parts.rs  mod.rs  plugin.rs  resources.rs  systems.rs
crates/heroes/src/toolchain/: cooldown.rs  maths.rs  mod.rs  ray_casting.rs
crates/inspector/: Cargo.toml
crates/inspector/src/: plugin.rs  resources.rs  widgets.rs
crates/levels/: Cargo.toml
crates/multigo/: Cargo.toml  README.md
crates/multigo/src/: lib.rs  plugin.rs
crates/multigo/src/client/: mod.rs  plugin.rs  resources.rs  systems.rs
crates/multigo/src/server/: plugin.rs  resources.rs  systems.rs
crates/multigo/src/shared/: mod.rs  resources.rs  systems.rs
crates/multigo/src/shared/data_structs/: go_history.rs
crates/query_to_screen/: Cargo.toml
crates/query_to_screen/src/: lib.rs  plugin.rs
crates/reactive/: Cargo.toml  README.md
crates/reactive/src/: lib.rs  plugin.rs  rooms.rs
crates/reactive/src/client/: plugin.rs  resources.rs  systems.rs
crates/reactive/src/server/: plugin.rs  systems.rs
crates/reactive/src/shared/: mod.rs  resources.rs  systems.rs
crates/reactive/src/shared/data_structs/: a_list.rs  go_history.rs
crates/shaders/src/: resources.rs
crates/synx/: Cargo.toml
crates/synx/src/: lib.rs  plugin.rs  systems.rs
crates/ui/: Cargo.toml
logic/src/: plugin.rs
modules/core/: Cargo.toml
modules/gocha/: Cargo.toml  README.md
modules/networking/: Cargo.toml
networking/: Cargo.toml
networking/docs/: snapshot.txt
networking/src/: lib.rs
package-scripts/windows/: downgrade.bat  update.bat
prefabs/characters/: soul.ron  zero.ron
scripts/: update.sh
src/: characters.rs  characters_impl.rs  debugger.rs  game.rs  heroes_mapping.rs  main  main.rs  resources.rs  temp.rs
src/characters/: default.rs  default_char.rs  soul.rs  tamara.rs  zero.rs
src/characters_impl/: default.rs  kertzer.rs  koi_remberz.rs  mod.rs  tamara.rs  zero.rs
src/commands_impl/: commands.rs  conf_command.rs  mod.rs  plugin.rs  systems.rs
src/game/: components.rs
src/temp/: stats.rs
(+127 files in other folders)
