[package]
name = "Griffsort"
version = "0.0.17"
edition = "2021"
author = "Sigzaa Studio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [ "crates/*" ]

[dependencies]
bevy_rapier3d = { version = "0.16.2" , features = [ "enhanced-determinism" ] }
bevy = { version = "0.8.0", features = ["jpeg", "serialize"]}
synx = { path = "crates/synx" }
actions = { path = "crates/actions", version = "0.1.0" }
bevy-inspector-egui = "0.12.1"
reactive = { path = "crates/reactive" , version = "0.1.0"}
heroes = { path = "crates/heroes", version = "0.0.5"}
go_level = { path = "crates/go_level", version = "0.1.0"}
# gs_inspector = { path = "crates/gs_inspector" }
anime = { path = "crates/anime" }
gs_ui = { path = "crates/gs_ui" }
gs_states = { path = "crates/gs_states"}
bincode = "1.3.1"
serde = "1.0.137"
iyes_loopless = "0.7"
bevy_hanabi = "0.3"
tokio =  { version = "1.21.0", features = ["full"]}
keyframe = "1.1.1"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 1

