[package]
name = "griffsort"
version = "0.1.1"
edition = "2021"
author = "Sigzaa Studio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [ "crates/*" ]

[dependencies]

# Bevy ecosystem
bevy_rapier3d = { version = "0.17" , features = [ "enhanced-determinism", "debug-render" ] }
bevy = { version = "0.8.0", features = ["jpeg", "serialize"]}
iyes_loopless = "0.7"
bevy_hanabi = "0.3"
bevy_console = "0.4.0"
bevy_console_parser = "0.3.0"
bevy-inspector-egui = "0.13"
#bevy-inspector-egui = { path = "crates/bevy-inspector-egui" }
bevy-debug-text-overlay = "3.0.0"

# Local crates
synx = { path = "crates/synx" }
actions = { path = "crates/actions"}
reactive = { path = "crates/reactive"}
heroes = { path = "crates/heroes"}
go_level = { path = "crates/go_level"}
gs_inspector = { path = "crates/gs_inspector" }
gs_ui = { path = "crates/gs_ui" }
gs_states = { path = "crates/gs_states"}
query_to_screen = { path = "crates/query_to_screen"}
bevy_draw_debug_tools = { path = "crates/bevy_draw_debug_tools"}

# Other
bincode = "1.3.1"
serde = "1.0.137"
tokio =  { version = "1.21.0", features = ["full"]}
keyframe = { git = "https://github.com/HannesMann/keyframe"}
clamped = "1.0.0"

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.dev]
opt-level = 1

