[package]
name = "actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = { version = "0.8.0", features = ["serialize"]}
ron = "0.8"
serde = { version = "1", features = ["derive"] }
enum-iterator = "1.2.0"
colored = "2.0.0"



[dev-dependencies]

bevy = { version = "0.8.0", features = ["dynamic"]}
