[package]
name = "bevy_draw_debug_tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_rapier3d = { version = "0.17" , default-features = false }
bevy_prototype_debug_lines = { version = "0.8", features = ["3d"] }
bevy = { version = "0.8.0" }
bevy_egui = "0.16"