[package]
name = "corgee"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Part of Griffsort game"

# Todo: rename to corgee-rs
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0" 
serde = "1.0.137"
serde_json = "1.0.81"

[dev-dependencies]
bevy = { version = "0.7.0" }

