[package]
name = "corgee"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Part of Griffsort game"

# Todo: rename to corgee-rs
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8"} 
serde = "1.0.137"
serde_json = "1.0.81"
iyes_loopless = "0.7"
bevy_common_assets = { version = "0.3", features = ["ron","toml"]}
bevy_rapier3d = { version = "0.16.2" , features = [ "enhanced-determinism" ] }

