[package]
name = "go_character"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_mod_picking = "0.7.0"
bevy_transform_gizmo = "0.2.1"
bevy_rapier3d = { version = "0.14.1" , features = [ "enhanced-determinism" ] }
bevy = { version = "0.7.0" }
serde = "1.0.137"
serde_json = "1.0.81"
bevy_asset_ron = "0.4.0"
bevy_prototype_debug_lines = { git = "https://github.com/Toqozz/bevy_debug_lines", features = ["3d"] }
corgee = { path = "../corgee", version = "*" }



[dev-dependencies]
bevy = { version = "0.7.0" , features = ["dynamic"]}