[package]
name = "go_character"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_mod_picking = "0.8.0"


bevy = { version = "0.8.0" }
serde = "1.0.137"
serde_json = "1.0.81"
bevy_prototype_debug_lines = { version = "0.8", features = ["3d"] }
corgee = { path = "../corgee", version = "*" }



[dev-dependencies]
bevy = { version = "0.8.0" , features = ["dynamic"]}