[package]
name = "go_level"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_mod_picking = "0.8.0"
bevy = { version = "0.8.0" , features = ["jpeg"]}
bevy_rapier3d = { version = "0.16" , features = [ "enhanced-determinism" ] }
corgee = { path = "../corgee", version = "*" }
