[package]
name = "go_multiplayer" #multigo
version = "0.0.5"
edition = "2021"

# rename to multigo
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_snap = { git = "https://github.com/johanhelsing/bevy_snap", version = "0.2.0"}
bevy_renet = "0.0.2"
renet = "0.0.7"

serde = { version = "1.0", features = [ "derive" ] } 
bincode = "1.3.1"

go_core = { path = "../go_core" }

[features]
default = ["client"]
client = []
server = []
offline = []
localhost = []