[package]
name = "gs_inspector"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.0"
bevy_egui = "0.15"
bevy_console = "0.4.0"
#bevy-inspector-egui = { path = "../bevy-inspector-egui" }
bevy-inspector-egui = "0.13"
serde = "1.0.137"
synx = { path = "../synx" }
