[package]
name = "reactive"
version = "0.1.0"
edition = "2021"

# rename to reactive
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
bevy_snap = { git = "https://github.com/johanhelsing/bevy_snap", version = "0.2.0"}
bevy_renet = "0.0.2"
renet = "0.0.7"
go_snap = { path = "../go_snap"}

serde = { version = "1.0", features = [ "derive" ] } 
bincode = "1.3.1"

corgee = { path = "../corgee" }

[features]
default = ["client"]
client = ["server"]
server = []
offline = []
localhost = []