[package]
name = "synx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["serialize"]}
ron = "0.8"
serde = { version = "1", features = ["derive"] }
notify = "4.0.0"