[package]
name = "heroes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier", features = [ "enhanced-determinism" ] }
bevy = { version = "0.7.0"}
go_core = { path = "../../go_core"}
bevy_config_cam = "0.3.0"